[package]
name = "simplefin-bridge"
version = "0.0.1"
authors = ["Eric Minassian <eric@ericminassian.com>"]
description = "SimpleFIN Bridge SDK"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eric-minassian/simplefin-bridge"
keywords = ["simplefin", "bridge", "sdk"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
url = "2.5.4"

[dev-dependencies]
chrono = "0.4.39"
